View Issue Details

IDProjectCategoryView StatusLast Update
0032009Open CASCADEOCCT:Codingpublic2020-12-26 14:53
Reporterbugmaster Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version7.6.0 
Target Version7.6.0Fixed in Version7.6.0 
Summary0032009: Coding Rules, TKQADraw - suppress msvc10 compilation warning C4748
DescriptionVS 2008-2010
Type : MSBuild
Category : C4748
File Name : e:/builds/week-51_week-51/occt_src/src/qabugs/qabugs_11.cxx
Line : 2411
Message : /GS can not protect parameters and local variables from local buffer overrun because optimizations are disabled in function
TagsNo tags attached.
Test case numberbugs/fclasses/bug6143

Relationships

child of 0030762 closedbugmaster Foundation Classes - include backtrace within OSD_SIGSEGV 

Activities

git

2020-12-19 15:59

administrator   ~0097806

Branch CR32009 has been created by kgv.

SHA-1: 1e1d99f09f767829e96081b9144621ac00470a75


Detailed log of new commits:

Author: kgv
Date: Sat Dec 19 16:00:24 2020 +0300

    0032009: Coding Rules, TKQADraw - suppress msvc10 compilation warning C4748
    
    Added a workaround for msvc10 misbehavior.

kgv

2020-12-19 16:43

developer   ~0097809

Please check patch in OCCT branch CR32009.

git

2020-12-25 11:26

administrator   ~0097900

Branch CR32009 has been updated forcibly by kgv.

SHA-1: 543cdd6cf2709731a7ee811a62d74b29cebb3169

bugmaster

2020-12-26 12:15

administrator   ~0097918

Combination -
OCCT branch : WEEK-52
master SHA - 41046145c4a15f5cedf5f3c5877952ee00d568b4
a206de37fbfa0bf71bd534ae47192bbec23b8522
Products branch : WEEK-52 SHA - 290e5c74e8fef71947cadf90acb8e43c81ed10a1
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17722.770000000193 / 17710.950000000055 [+0.07%]
Products
Total CPU difference: 12416.490000000109 / 12412.520000000126 [+0.03%]
Windows-64-VC14:
OCCT
Total CPU difference: 19321.5625 / 19274.6875 [+0.24%]
Products
Total CPU difference: 13844.421875 / 13853.046875 [-0.06%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2020-12-26 14:53

administrator   ~0097949

Branch CR32009 has been deleted by inv.

SHA-1: 543cdd6cf2709731a7ee811a62d74b29cebb3169

Related Changesets

occt: master 41046145

2020-12-19 13:00:24

kgv


Committer: bugmaster Details Diff
0032009: Coding Rules, TKQADraw - suppress msvc10 compilation warning C4748

Added a workaround for msvc10 misbehavior.
Affected Issues
0032009
mod - src/QABugs/QABugs_11.cxx Diff File
mod - tests/bugs/fclasses/bug6143 Diff File

Issue History

Date Modified Username Field Change
2020-12-19 14:12 bugmaster New Issue
2020-12-19 14:12 bugmaster Assigned To => kgv
2020-12-19 14:13 bugmaster Status new => assigned
2020-12-19 15:43 kgv Relationship added child of 0030762
2020-12-19 15:44 kgv Summary Coding - New warnings after integration fix for 30762 => Coding - suppress msvc10 compilation warning C4748
2020-12-19 15:48 kgv Summary Coding - suppress msvc10 compilation warning C4748 => Coding Rules, TKQADraw - suppress msvc10 compilation warning C4748
2020-12-19 15:59 git Note Added: 0097806
2020-12-19 16:43 kgv Note Added: 0097809
2020-12-19 16:43 kgv Assigned To kgv => bugmaster
2020-12-19 16:43 kgv Status assigned => feedback
2020-12-25 11:26 git Note Added: 0097900
2020-12-25 14:14 bugmaster Status feedback => reviewed
2020-12-26 12:15 bugmaster Note Added: 0097918
2020-12-26 12:15 bugmaster Status reviewed => tested
2020-12-26 12:22 bugmaster Test case number => bugs/fclasses/bug6143
2020-12-26 14:40 bugmaster Changeset attached => occt master 41046145
2020-12-26 14:40 bugmaster Status tested => verified
2020-12-26 14:40 bugmaster Resolution open => fixed
2020-12-26 14:53 git Note Added: 0097949